chore: added DDD structure for shared folder

--- a/zenflicks-backend/zenflicks-backend.csproj
+++ b/zenflicks-backend/zenflicks-backend.csproj
@@ -12,7 +12,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="shared\" />
+      <Folder Include="shared\domain\repositories\" />
+      <Folder Include="shared\infrastucture\interfaces\ASP\configuration\extensions\" />
+      <Folder Include="shared\infrastucture\persistence\EFC\configuration\extensions\" />
+      <Folder Include="shared\infrastucture\persistence\EFC\repositories\" />
     </ItemGroup>
 
 </Project>
