--- a/zenflicks-backend/appsettings.json
+++ b/zenflicks-backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=123456;database=zenflicks-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
