--- a/ZenflicksPlatform.API/ZenflicksPlatform.API.csproj
+++ b/ZenflicksPlatform.API/ZenflicksPlatform.API.csproj
@@ -16,4 +16,17 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="forums\Application\Internal\CommandServices\" />
+      <Folder Include="forums\Application\Internal\QueryServices\" />
+      <Folder Include="forums\Domain\Model\Aggregates\" />
+      <Folder Include="forums\Domain\Model\Commands\" />
+      <Folder Include="forums\Domain\Model\Queries\" />
+      <Folder Include="forums\Domain\Repositories\" />
+      <Folder Include="forums\Domain\Services\" />
+      <Folder Include="forums\Infrastructure\Repositories\" />
+      <Folder Include="forums\Interfaces\REST\Resources\" />
+      <Folder Include="forums\Interfaces\REST\Transform\" />
+    </ItemGroup>
+
 </Project>
