chore: added database

--- a/ZenflicksPlatform.API/appsettings.json
+++ b/ZenflicksPlatform.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=123456;database=zenflicks-database"
+    "DefaultConnection": "server=mysql-zenflicks-zenflicks.k.aivencloud.com;user=avnadmin;password=AVNS_g0bRU2NLYBPGFOtxM_9;database=defaultdb;port=13853"
   },
   "Logging": {
     "LogLevel": {
